--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Project One</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <script src="js/app.js" charset="utf-8"></script>
   </head>
   <body>
-
+    <h1>Project 1: The game</h1>
   </body>
 </html>
