--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <script src="js/app.js" charset="utf-8"></script>
   </head>
   <body>
-    <h1>Project 1: The game</h1>
+    <h1>Othello</h1>
+    <div class="game-board">
+
+    </div>
   </body>
 </html>
