--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="js/app.js" charset="utf-8"></script>
   </head>
   <body>
-    <h1>Othello</h1>
+    <img src="images/Othello (board game) free icon 4.jpeg" alt="">
     <div class="game-board">
 
     </div>
