added a score section

--- a/index.html
+++ b/index.html
@@ -7,9 +7,15 @@
     <script src="js/app.js" charset="utf-8"></script>
   </head>
   <body>
-    <img src="images/Othello (board game) free icon 4.jpeg" alt="">
-    <div class="game-board">
-
-    </div>
+    <header>
+      <img src="images/Othello (board game) free icon 4.jpeg" alt="othello logo">
+    </header>
+    <main>
+      <div class="score">
+        <div>Desdemona: <span class="red">2</span></div>
+        <div>Othello: <span class="black">2</span></div>
+      </div>
+      <div class="game-board"></div>
+    </main>
   </body>
 </html>
