moved the calculate score and set score to addDisk function

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     </header>
     <main>
       <div class="score">
-        <div>Desdemona: <span class="red">2</span></div>
-        <div>Othello: <span class="black">2</span></div>
+        <div>Desdemona: <span class="red"></span></div>
+        <div>Othello: <span class="black"></span></div>
       </div>
       <div class="game-board"></div>
     </main>
