show icon next to current player

--- a/index.html
+++ b/index.html
@@ -13,8 +13,14 @@
     </header>
     <main>
       <div class="score">
-        <div>Desdemona: <span class="red"></span></div>
-        <div>Othello: <span class="black"></span></div>
+        <div class="turn red">
+          <div>Desdemona: <span></span></div>
+          <img src="http://chittagongit.com//images/rose-icon/rose-icon-18.jpg" alt="">
+        </div>
+        <div class="turn black">
+          <img src="http://chittagongit.com//images/icon-sword/icon-sword-23.jpg" alt="">
+          <div>Othello: <span></span></div>
+        </div>
       </div>
       <div class="game-board"></div>
     </main>
