when someone wins show banner with winners name

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
       <img src="images/Othello (board game) free icon 4.jpeg" alt="othello logo">
     </header>
     <main>
-      <div class="score">
+      <div class="winner">
+        The winner is:
+      </div>
+      <div class="score active">
         <div class="turn red">
           <div>Desdemona: <span></span></div>
           <img src="http://chittagongit.com//images/rose-icon/rose-icon-18.jpg" alt="">
