created a restart button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </div>
       </div>
       <div class="game-board"></div>
+      <button class="button">Play again</button>
     </main>
   </body>
 </html>
