save players icons locally

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <div class="score active">
         <div class="turn red">
           <div>Desdemona: <span></span></div>
-          <img src="http://chittagongit.com//images/rose-icon/rose-icon-18.jpg" alt="">
+          <img src="./images/rose-icon.jpg" alt="">
         </div>
         <div class="turn black">
-          <img src="http://chittagongit.com//images/icon-sword/icon-sword-23.jpg" alt="">
+          <img src="./images/icon-sword.jpg" alt="">
           <div>Othello: <span></span></div>
         </div>
       </div>
