--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </div>
         </div>
         <div class="game-board"></div>
-        <button class="button">Play again</button>
+        <button class="button replay">Play again</button>
       </div>
     </main>
   </body>
