added game's title to the starter game

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     </header>
     <main>
       <div class="start active">
+        <h1>Othello</h1>
         <img src="./images/othelo-logo.png" alt="othello logo">
         <div class="buttons">
           <button class="button single-player">Single Player</button>
